# python-tai64

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tai64.py  tox.ini
tai64/: __init__.py
tests/: test_tai64.py
